examples/neg/effekt_implemented_extern.effekt
extern pure def foo(): Unit = 
  js { println("Bar") }
  default { () }

def main() = { foo() }